# olympus-memory-engine

./: .gitignore  CAPABILITIES_REPORT.md  INTEGRATION_TEST_REPORT.md  QUICKSTART.md  README.md  SIMPLIFICATION_PLAN.md  TESTING_REPORT.md  config.yaml  mypy.ini  pyproject.toml  pytest.ini
docs/: AGENT_COMMUNICATION_FIX.md  AGENT_TO_AGENT_STATUS.md  ARCHITECTURE_STATUS.md  CLI_CAPABILITIES.md  ENHANCED_TOOLING.md  ENTROPY_BASED_MEASUREMENT_DESIGN.md  EXTERNAL_ACTOR_DESIGN.md  JSON_FUNCTION_CALLING_SUCCESS.md  MULTI_AGENT_README.md  RELIABILITY_AND_VALIDATION_IMPROVEMENTS.md  REORGANIZATION_2025-10-26.md  SESSION_SUMMARY_2025-10-26.md  SUMMARY.md  TOOLS.md  bug_fixing_experiment.md  infrastructure_guide.md  testing_guide.md
logs/: agent_system_20251128_203240.jsonl  agent_system_20251128_203523.jsonl  agent_system_20251128_203631.jsonl  agent_system_20251128_204256.jsonl  agent_system_20251128_204401.jsonl  agent_system_20251128_204723.jsonl  agent_system_20251128_204736.jsonl  agent_system_20251128_204956.jsonl  agent_system_20251128_211333.jsonl  agent_system_20251128_211751.jsonl  agent_system_20251128_212152.jsonl  agent_system_20251128_212623.jsonl  agent_system_20251128_212643.jsonl  agent_system_20251128_213044.jsonl  agent_system_20251128_221844.jsonl
scripts/: benchmark_10k.py  chat.py  demo_tools.py  export_traces.py  init_database.py  inspect_arango.py  memory_engine.py  migrate_arxiv.py  multi_agent_chat.py  run_bug_fixing_experiment.py
sql/: schema.sql  schema_v2.sql
src/: __init__.py
src/agents/: __init__.py  agent_manager.py  memgpt_agent.py
src/analysis/: __init__.py  entropy_monitor.py  if_track.py
src/config/: __init__.py  models.py
src/infrastructure/: __init__.py  config_manager.py  logging_config.py  metrics.py
src/llm/: __init__.py  client.py  ollama_client.py  transformers_engine.py  vllm_client.py
src/memory/: memory_manager.py  memory_storage.py  schema.sql  storage.py
src/tools/: tools.py
src/ui/: __init__.py  cli.py  shell.py  terminal_ui.py
src/validation/: scheming_detection.py
tests/: conftest.py  new_execute_function_calls.py  test_agent_manager.py  test_agent_to_agent.py  test_cli_tools.py  test_config_manager.py  test_delegation.py  test_enhanced_tools.py  test_external_actor_integration.py  test_external_actors.py  test_function_reliability.py  test_infrastructure.py  test_logging_config.py  test_memory_storage.py  test_metrics.py  test_multi_agent.py  test_ollama_integration.py  test_simple_collab.py  test_tools_security.py
